--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * linguist-vendored
-*.tcl linguist-vendored=false
+* .tcl linguist-vendored=true
