--- a/.gitignore
+++ b/.gitignore
@@ -127,10 +127,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-/G-Eazy & Jack Harlow - Moana (Lyrics)-lHSQVo5Ti3k.webm.part
 /ffprobe.exe
 /ffmpeg.exe
 /Songs/
 .cache
 /output/
 /Release-Studio/
+
+# Sonarqube Files
+.scannerwork
+
+# Code Config
+.vscode
