--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
-pydub==0.25.1
-requests==2.26.0
-youtube_search_python==1.4.6
-spotipy==2.18.0
-youtube_dl==2021.6.6
+anyio==3.6.2
+async-timeout==4.0.2
+beautifulsoup4==4.11.2
+Brotli==1.0.9
+certifi==2022.12.7
+charset-normalizer==3.0.1
+coverage==5.5
+deprecation==2.1.0
+eyed3==0.9.7
+filetype==1.2.0
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.4
 lyricsgenius==3.0.1
-eyed3==0.9.6
+mutagen==1.46.0
+packaging==23.0
+pycryptodomex==3.17
+redis==4.5.1
+requests==2.28.2
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+spotipy==2.22.1
+toml==0.10.2
+urllib3==1.26.14
+websockets==10.4
+youtube-search-python==1.6.6
+yt-dlp==2023.1.6
