--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 anyio==3.6.2
 async-timeout==4.0.2
-autopep8==2.0.1
 beautifulsoup4==4.11.2
 Brotli==1.0.9
 certifi==2022.12.7
@@ -16,19 +15,18 @@ idna==3.4
 lyricsgenius==3.0.1
 mutagen==1.46.0
 packaging==23.0
-pycodestyle==2.10.0
+Pillow==9.4.0
 pycryptodomex==3.17
 redis==4.5.1
 requests==2.28.2
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
-soupsieve==2.3.2.post1
+soupsieve==2.4
 spotipy==2.22.1
 toml==0.10.2
-tomli==2.0.1
 tqdm==4.64.1
 urllib3==1.26.14
 websockets==10.4
 youtube-search-python==1.6.6
-yt-dlp==2023.1.6
+yt-dlp==2023.2.17
